--- a/service-details.html
+++ b/service-details.html
@@ -216,7 +216,7 @@
         <form action="doctors.html" class="container">
             <h6>Reservation information</h6>
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12">
                     <div class="form-group">
                         <i class="fa-solid fa-location-dot"></i>
                         <select name="" id="" class="form-control selectpicker" title="Enter your area">
@@ -225,7 +225,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12">
                     <div class="form-group">
                         <i class="fa-solid fa-tooth"></i>
                         <select name="" id="" class="form-control selectpicker" title="Select service">
@@ -234,7 +234,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12">
                     <div class="form-group">
                         <i class="fa-solid fa-building"></i>
                         <select name="" id="" class="form-control selectpicker" title="Select Branch">
@@ -243,7 +243,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12">
                     <button type="submit" class="btn submit_btn">Search now</button>
                 </div>
             </div>
@@ -272,7 +272,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
-                    <a href="booking_doctor.html" class="btn book_doctor_btn">Book Doctor</a>
+                    <a href="doctor_details.html" class="btn book_doctor_btn">Book Doctor</a>
                 </div>
             </div>
             <!-- For loop this Card Doctor -->
@@ -291,7 +291,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
-                    <a href="booking_doctor.html" class="btn book_doctor_btn">Book Doctor</a>
+                    <a href="doctor_details.html" class="btn book_doctor_btn">Book Doctor</a>
                 </div>
             </div>
             <!-- For loop this Card Doctor -->
@@ -310,7 +310,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
-                    <a href="booking_doctor.html" class="btn book_doctor_btn">Book Doctor</a>
+                    <a href="doctor_details.html" class="btn book_doctor_btn">Book Doctor</a>
                 </div>
             </div>
             <!-- For loop this Card Doctor -->
@@ -329,7 +329,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
-                    <a href="booking_doctor.html" class="btn book_doctor_btn">Book Doctor</a>
+                    <a href="doctor_details.html" class="btn book_doctor_btn">Book Doctor</a>
                 </div>
             </div>
             <!-- For loop this Card Doctor -->
@@ -358,25 +358,13 @@
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            كيف يمكنني الانضمام الى المنصة والحصول على فرصة عمل ؟
+                            How Can I Book My New Appointment ?
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد
-                            النص
-                            العربى،
-                            حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف
-                            التى
-                            يولدها
-                            التطبيق هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من
-                            مولد
-                            النص
-                            العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة
-                            عدد الحروف
-                            التى يولدها التطبيق.
-                            .
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod  orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod  orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod  orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy eirmod
                         </div>
                     </div>
                 </div>
@@ -384,24 +372,13 @@
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            كيف يمكنني الانضمام الى المنصة والحصول على فرصة عمل ؟
+                            How Can I Book My New Appointment ?
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد
-                            النص
-                            العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة
-                            عدد
-                            الحروف
-                            التى يولدها التطبيق هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
-                            هذا
-                            النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى
-                            إضافة
-                            إلى زيادة عدد الحروف التى يولدها التطبيق.
-                            .
-
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod  orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod  orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod  orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy eirmod
                         </div>
                     </div>
                 </div>
@@ -409,24 +386,13 @@
                     <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            كيف يمكنني الانضمام الى المنصة والحصول على فرصة عمل ؟
+                            How Can I Book My New Appointment ?
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد
-                            النص
-                            العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة
-                            عدد
-                            الحروف
-                            التى يولدها التطبيق هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
-                            هذا
-                            النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى
-                            إضافة
-                            إلى زيادة عدد الحروف التى يولدها التطبيق.
-                            .
-
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod  orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod  orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod  orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy eirmod
                         </div>
                     </div>
                 </div>
