--- a/service.html
+++ b/service.html
@@ -200,7 +200,7 @@
                     <h5 class="name">Ahmed Hawam</h5>
                     <span class="speciality">Dental Prosthodontist Speciality</span>
                     <!-- <p class="location">El Damam Branch , El Mawada District</p> -->
-                    <a href="booking_doctor.html" class="btn book_doctor_btn">Book Doctor</a>
+                    <a href="service-details.html" class="btn book_doctor_btn">Book Doctor</a>
                 </div>
             </div>
             <!-- For loop this Card Doctor -->
@@ -211,7 +211,7 @@
                     <h5 class="name">Ahmed Hawam</h5>
                     <span class="speciality">Dental Prosthodontist Speciality</span>
                     <!-- <p class="location">El Damam Branch , El Mawada District</p> -->
-                    <a href="booking_doctor.html" class="btn book_doctor_btn">Book Doctor</a>
+                    <a href="service-details.html" class="btn book_doctor_btn">Book Doctor</a>
                 </div>
             </div>
             <!-- For loop this Card Doctor -->
@@ -223,7 +223,7 @@
                     <h5 class="name">Ahmed Hawam</h5>
                     <span class="speciality">Dental Prosthodontist Speciality</span>
                     <!-- <p class="location">El Damam Branch , El Mawada District</p> -->
-                    <a href="booking_doctor.html" class="btn book_doctor_btn">Book Doctor</a>
+                    <a href="service-details.html" class="btn book_doctor_btn">Book Doctor</a>
                 </div>
             </div>
             <!-- For loop this Card Doctor -->
