--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                 diam nonumy eirmod tempor invidunt ut labore et dolore magna
               </p>
-              <a href="service.html" class="btn">Book now</a>
+              <a href="service-details.html" class="btn">Show details</a>
             </div>
           </div>
           <!-- For loop this card -->
@@ -293,7 +293,7 @@
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                 diam nonumy eirmod tempor invidunt ut labore et dolore magna
               </p>
-              <a href="service.html" class="btn">Book now</a>
+              <a href="service-details.html" class="btn">Show details</a>
             </div>
           </div>
           <!-- For loop this card -->
@@ -311,7 +311,7 @@
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                 diam nonumy eirmod tempor invidunt ut labore et dolore magna,
               </p>
-              <a href="service.html" class="btn">Book now</a>
+              <a href="service-details.html" class="btn">Show details</a>
             </div>
           </div>
           <!-- For loop this card -->
@@ -386,7 +386,7 @@
               <h3 class="title">Miswak Academy</h3>
               <p class="text">Be part of the toothpick</p>
               <img src="./media/image/tooth.png" alt="tooth" />
-              <a href="#" class="join_btn btn">Join us</a>
+              <a href="service.html" class="join_btn btn">Join us</a>
             </div>
           </div>
           <!-- End Miswak Academy -->
