--- a/service.html
+++ b/service.html
@@ -23,6 +23,7 @@
     <!-- ? Favicon -->
     <link rel="icon" href="media/image/favicon.ico" type="image" />
     <title>Mswak</title>
+
 </head>
 
 <body>
@@ -195,7 +196,7 @@
             </div>
             <!-- For loop this Card Doctor -->
             <div class="card_doctor">
-                <img src="./media/image/7w7w.jpg" alt="doctor" />
+                <img src="./media/image/service1.jpg" alt="doctor" />
                 <div class="other_doctor_details">
                     <h5 class="name">Ahmed Hawam</h5>
                     <span class="speciality">Dental Prosthodontist Speciality</span>
@@ -206,7 +207,7 @@
             <!-- For loop this Card Doctor -->
             <!-- For loop this Card Doctor -->
             <div class="card_doctor">
-                <img src="./media/image/7w7w.jpg" alt="doctor" />
+                <img src="./media/image/service2.jpg" alt="doctor" />
                 <div class="other_doctor_details">
                     <h5 class="name">Ahmed Hawam</h5>
                     <span class="speciality">Dental Prosthodontist Speciality</span>
@@ -218,7 +219,7 @@
 
             <!-- For loop this Card Doctor -->
             <div class="card_doctor">
-                <img src="./media/image/7w7w.jpg" alt="doctor" />
+                <img src="./media/image/service3.jpg" alt="doctor" />
                 <div class="other_doctor_details">
                     <h5 class="name">Ahmed Hawam</h5>
                     <span class="speciality">Dental Prosthodontist Speciality</span>
@@ -227,17 +228,11 @@
                 </div>
             </div>
             <!-- For loop this Card Doctor -->
-
-
-
 
         </div>
     </div>
 
     <!-- finish  doctor detials -->
-
-
-
 
 
 
@@ -375,8 +370,17 @@
     </footer>
     <!-- end footer section -->
 
+    <script>
+        window.history.back(
+            window.location.reload();
+        )
 
-
+        if(!!window.performance && window.performance.navigation.type === 2)
+{
+    console.log('Reloading');
+    window.location.reload();
+}
+           </script>
 
 </body>
 
