--- a/service.html
+++ b/service.html
@@ -175,7 +175,6 @@
                     <a href="doctors.html" class="btn first"> Booking Now</a>
                 </div>
             </div>
-
         </div>
     </section>
     <!-- finish great place -->
@@ -198,10 +197,10 @@
             <div class="card_doctor">
                 <img src="./media/image/service1.jpg" alt="doctor" />
                 <div class="other_doctor_details">
-                    <h5 class="name">Ahmed Hawam</h5>
+                    <h5 class="name">Children's dentistry</h5>
                     <span class="speciality">Dental Prosthodontist Speciality</span>
                     <!-- <p class="location">El Damam Branch , El Mawada District</p> -->
-                    <a href="service-details.html" class="btn book_doctor_btn">Book Doctor</a>
+                    <a href="service-details.html" class="btn book_doctor_btn">Show details</a>
                 </div>
             </div>
             <!-- For loop this Card Doctor -->
@@ -209,10 +208,10 @@
             <div class="card_doctor">
                 <img src="./media/image/service2.jpg" alt="doctor" />
                 <div class="other_doctor_details">
-                    <h5 class="name">Ahmed Hawam</h5>
+                    <h5 class="name">Children's dentistry</h5>
                     <span class="speciality">Dental Prosthodontist Speciality</span>
                     <!-- <p class="location">El Damam Branch , El Mawada District</p> -->
-                    <a href="service-details.html" class="btn book_doctor_btn">Book Doctor</a>
+                    <a href="service-details.html" class="btn book_doctor_btn">Show details</a>
                 </div>
             </div>
             <!-- For loop this Card Doctor -->
@@ -221,10 +220,10 @@
             <div class="card_doctor">
                 <img src="./media/image/service3.jpg" alt="doctor" />
                 <div class="other_doctor_details">
-                    <h5 class="name">Ahmed Hawam</h5>
+                    <h5 class="name">Children's dentistry</h5>
                     <span class="speciality">Dental Prosthodontist Speciality</span>
                     <!-- <p class="location">El Damam Branch , El Mawada District</p> -->
-                    <a href="service-details.html" class="btn book_doctor_btn">Book Doctor</a>
+                    <a href="service-details.html" class="btn book_doctor_btn">Show details</a>
                 </div>
             </div>
             <!-- For loop this Card Doctor -->
@@ -233,7 +232,6 @@
     </div>
 
     <!-- finish  doctor detials -->
-
 
 
     <!-- start footer section -->
@@ -369,19 +367,6 @@
         </div>
     </footer>
     <!-- end footer section -->
-
-    <script>
-        window.history.back(
-            window.location.reload();
-        )
-
-        if(!!window.performance && window.performance.navigation.type === 2)
-{
-    console.log('Reloading');
-    window.location.reload();
-}
-           </script>
-
 </body>
 
 </html>
