--- a/doctor_details.html
+++ b/doctor_details.html
@@ -563,8 +563,15 @@
                 <span>200 SAR</span>
               </div>
               <div class="location">
-                <i class="fa-solid fa-location-dot"></i>
-                <span>ElDamam Branch , Jasmine District , A2esha …..</span>
+                <div class="drop">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <!-- <span>ElDamam Branch , Jasmine District , A2esha …..</span> -->
+                  <select name="" id="" class="form-control selectpicker">
+                    <option value="">ElDamam Branch</option>
+                    <option value="">Jasmine District</option>
+                    <option value="">A2esha</option>
+                  </select>
+                </div>
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3418.960405149614!2d31.371055515097687!3d31.027352778424618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f79d1062afff57%3A0x40e6c610456cf723!2sCrazy%20Idea!5e0!3m2!1sen!2seg!4v1663512041744!5m2!1sen!2seg"
                   style="border: 0"
@@ -629,7 +636,7 @@
                               class="form-check-label"
                               for="flexRadioDefault1"
                             >
-                              4:30 pm
+                              4:30 pm - 5:30pm
                             </label>
                           </div>
                         </li>
@@ -645,7 +652,7 @@
                               class="form-check-label"
                               for="flexRadioDefault2"
                             >
-                              5:15 pm
+                              5:30 pm - 6:30pm
                             </label>
                           </div>
                         </li>
@@ -661,7 +668,7 @@
                               class="form-check-label"
                               for="flexRadioDefault3"
                             >
-                              6:00 pm
+                              6:30 pm - 7:30pm
                             </label>
                           </div>
                         </li>
@@ -688,7 +695,7 @@
                               class="form-check-label"
                               for="flexRadioDefault4"
                             >
-                              4:30 pm
+                              4:30 pm - 5:30pm
                             </label>
                           </div>
                         </li>
@@ -704,7 +711,7 @@
                               class="form-check-label"
                               for="flexRadioDefault5"
                             >
-                              5:15 pm
+                              5:30 pm - 6:30pm
                             </label>
                           </div>
                         </li>
@@ -720,7 +727,7 @@
                               class="form-check-label"
                               for="flexRadioDefault6"
                             >
-                              6:00 pm
+                              6:30 pm - 7:30pm
                             </label>
                           </div>
                         </li>
@@ -747,7 +754,7 @@
                               class="form-check-label"
                               for="flexRadioDefault7"
                             >
-                              4:30 pm
+                              4:30 pm - 5:30pm
                             </label>
                           </div>
                         </li>
@@ -763,7 +770,7 @@
                               class="form-check-label"
                               for="flexRadioDefault8"
                             >
-                              5:15 pm
+                              5:30 pm - 6:30pm
                             </label>
                           </div>
                         </li>
@@ -779,7 +786,7 @@
                               class="form-check-label"
                               for="flexRadioDefault9"
                             >
-                              6:00 pm
+                              6:30 pm - 7:30pm
                             </label>
                           </div>
                         </li>
@@ -806,7 +813,7 @@
                               class="form-check-label"
                               for="flexRadioDefault10"
                             >
-                              4:30 pm
+                              4:30 pm - 5:30pm
                             </label>
                           </div>
                         </li>
@@ -822,7 +829,7 @@
                               class="form-check-label"
                               for="flexRadioDefault11"
                             >
-                              5:15 pm
+                              5:30 pm - 6:30pm
                             </label>
                           </div>
                         </li>
@@ -838,7 +845,7 @@
                               class="form-check-label"
                               for="flexRadioDefault12"
                             >
-                              6:00 pm
+                              6:30 pm - 7:30pm
                             </label>
                           </div>
                         </li>
