--- a/login.html
+++ b/login.html
@@ -219,6 +219,8 @@
       </div>
       <!-- finish input group -->
 
+      <a href="forget_password.html" class="forget_password_href">Forget Password?</a>
+
       <button type="submit" class="btn btn_submit" name="submit" id="submit">
         Login
       </button>
