--- a/login.html
+++ b/login.html
@@ -167,7 +167,7 @@
     <!-- FINISH BREADCRUMB -->
 
     <!-- start form login  -->
-    <form action="#" class="form_login">
+    <form action="profile.html" class="form_login">
       <h5>Login</h5>
       <!-- start button social login -->
       <div class="collection">
